<resources>
    <string name="app_name">Interactive Story App</string>
    <string name="firebase_login">Firebase Login</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="logout">Logout</string>
    <string name="see_notes">SEE NOTES</string>
    <string name="action_delete_all_entries">Delete All Notes</string>
    <string name="editor_activity_title_new_note">Add a Note</string>
    <string name="action_save">Save</string>
    <string name="category_overview">Overview</string>
    <string name="hint_note_title">Title</string>
    <string name="hint_note_note"> Note</string>
    <string name="see_stories">SEE STORIES</string>
    <string name="the_boat">The Boat</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="start_your_adventure">START YOUR ADVENTURE</string>
    <string name="story_image_content_description">Story page image</string>
    <string name="play_again_button_text">PLAY AGAIN</string>
    <string name="key_name">name</string>
    <string name="story1_page0">
        Tired of work, you decided to leave your cozy house and take a walk along the seashore. After few minutes, you reach abandoned harbour and you stop for a moment, still thinking about your unfinished work. Suddenly you hear someone whispering behind you: \" %1$s, %1$s\...". When you turn around, you see a lonely boat moored to a piece of wood, you\'ve never seen it before.
       </string>
    <string name="story1_page0_choice1">Investigate the boat</string>
    <string name="story1_page0_choice2">Continue your walk</string>
    <string name="story1_page1">When you approach the boat, you see that it\'s open. Something is making quiet, suspicious noise inside. You notice a big, old knife on the ground, it\'s covered in blood.</string>
    <string name="story1_page1_choice1">Enter the boat</string>
    <string name="story1_page1_choice2">Grab the knife and enter the boat</string>
    <string name="story1_page2">You leave the harbour and after few more steps you hear someone screaming, even though you know it\'s not a good idea, something is telling you to get back to harbour and check whats happening in the boat.</string>
    <string name="story1_page2_choice1">Head back to harbour and check the boat</string>
    <string name="story1_page2_choice2">Get back home as soon as possible</string>
    <string name="story1_page3">First thing you notice inside is a dead woman body, lying on the floor, the noise is coming from another room.</string>
    <string name="story1_page3_choice1">Enter another room</string>
    <string name="story1_page3_choice2">Go back and grab the knife</string>
    <string name="story1_page4">You open the door, immediately blurred shadow attacks you but you manage to stab creature with the knife, it jumps back and looks at you with it\'s red eyes.</string>
    <string name="story1_page4_choice1">Attack again</string>
    <string name="story1_page4_choice2">Run away</string>
    <string name="story1_page5">You try to take one more step and before you move shadow attacks you with great speed, last thing you notice is long claws slashing your arm, you fall down and pass out.</string>
    <string name="story1_page6">You reached your home safely. Scared of the recent events, you go to sleep. When you wake up next morning the whole thing seems like a very vivid dream.</string>
    <string name="story2_page0">On your return trip from studying Saturn\'s rings, you hear a distress signal that seems to be coming from the surface of Mars. It\'s strange because there hasn\'t been a colony there in years. Even stranger, it\'s calling you by name: \"Help me, %1$s, you\'re my only hope.\"</string>
    <string name="story2_page0_choice1">Stop and investigate</string>
    <string name="story2_page0_choice2">Continue home to Earth</string>
    <string name="story2_page1">You deftly land your ship near where the distress signal originated. You didn\'t notice anything strange on your fly-by, but there is a cave in front of you. Behind you is an abandoned rover from the early 21st century.</string>
    <string name="story2_page1_choice1">Explore the cave</string>
    <string name="story2_page1_choice2">Explore the rover</string>
    <string name="story2_page2">You continue your course to Earth. Two days later, you receive a transmission from HQ saying that they have detected some sort of anomaly on the surface of Mars near an abandoned rover. They ask you to investigate, but ultimately the decision is yours because your mission has already run much longer than planned and supplies are low.</string>
    <string name="story2_page2_choice1">Head back to Mars to investigate</string>
    <string name="story2_page2_choice2">Continue home to Earth</string>
    <string name="story2_page3">Your EVA suit is equipped with a headlamp, which you use to navigate the cave. After searching for a while your oxygen levels are starting to get pretty low. You know you should go refill your tank, but there\'s a very faint light up ahead.</string>
    <string name="story2_page3_choice1">Refill at ship and explore the rover</string>
    <string name="story2_page3_choice2">Continue towards the faint light</string>
    <string name="story2_page4">The rover is covered in dust and most of the solar panels are broken. But you are quite surprised to see the on-board system booted up and running. In fact, there is a message on the screen: \"%1$s, come to 28.543436, -81.369031.\" Those coordinates aren\'t far, but you don\'t know if your oxygen will last for a trip there and back.</string>
    <string name="story2_page4_choice1">Explore the coordinates</string>
    <string name="story2_page4_choice2">Return to Earth</string>
    <string name="story2_page5">After a long walk slightly uphill, you end up at the top of a small crater. You look around, and are overjoyed to see your favorite android, %1$s-S1124. It had been lost on a previous mission to Mars! You take it back to your ship and fly back to Earth.</string>
    <string name="story2_page6">You arrive home on Earth. While your mission was a success, you forever wonder what was sending that signal. Perhaps a future mission will be able to investigate…</string>
    <string name="story3_page0">You are visiting New York for the first time, the day just started and you are thinking what to visit first. Suddenly someone screams your name \"%1$s!, %1$s. You turn a round and you see your friend from college. You two have a short talk about good old times and then you continue your trip.</string>
    <string name="story3_page0_choice1">Go to Times Square</string>
    <string name="story3_page0_choice2">Go to Statue of Liberty</string>
    <string name="story3_page1">While admiring all the neon lights, you realize that you are hungry.</string>
    <string name="story3_page1_choice1">Visit casino</string>
    <string name="story3_page1_choice2">Get some food</string>
    <string name="story3_page2">After seeing the Statue of Liberty, you realize you are hungry.</string>
    <string name="story3_page2_choice1">Get some food</string>
    <string name="story3_page2_choice2">Find a hotel</string>
    <string name="story3_page3">Your stomach is rumbling but the desire to win few rounds of black jack is still in your head.</string>
    <string name="story3_page3_choice1">Go to casino</string>
    <string name="story3_page3_choice2">Get some food</string>
    <string name="story3_page4">You eat few slices of famous one dollar pizza and you keep thinking about slot machines</string>
    <string name="story3_page4_choice1">Visit Casino</string>
    <string name="story3_page4_choice2">Find a hotel</string>
    <string name="story3_page5">You get to the casino and you immediately start playing. You loose your money very quickly and you come back to your hotel by feet.</string>
    <string name="story3_page6">You get a cab to a random hotel and you go to sleep immediately already thinking what you are gonna do tomorrow.</string>
    <string name="story4_page0">The Hospital was filled with people. Doctors rushing patients to emergency rooms, noise echoing through the halls. A few military officers stood at the entrance of the hospital, armed with M16′s. I was a member of the FBI. We were sent to investigate a series of strange murders that had been happening around the city.</string>
    <string name="story4_page0_choice1">By now, several other cities in the U.S. were already quarantined</string>
    <string name="story4_page0_choice2">None of it made sense</string>
    <string name="story4_page1">Murders and a mysterious have been plaguing the United States. Just then, my partner, James, rushed into the room that I was standing in. “Alex, we need to leave! Something’s come up!” He said. We rushed through the crowd, practically pushing our way to the door.</string>
    <string name="story4_page1_choice1">“What’s going on?!”</string>
    <string name="story4_page1_choice2">I shouted, unable to hear myself through the noise</string>
    <string name="story4_page2">“There’s a riot downtown. People are getting killed” Alex said. When we had finally reached the door, there was a black car waiting outside for us. We got in and drove away, leaving behind a cloud of burnt rubber smoke.</string>
    <string name="story4_page2_choice1">The other agents in the car loaded their weapons</string>
    <string name="story4_page2_choice2">I had a 10 inch barrel Smith and Wesson 500 revolver</string>
    <string name="story4_page3">It was a useful, and I had owned it for many years. “Were in town is the riot?” I asked the driver. “It’s in Brooklyn. About a block away” the driver replied. As we drove, the radio came on. </string>
    <string name="story4_page3_choice1">here was a lot of loud noise in the background</string>
    <string name="story4_page3_choice2">The speaker sounded like he was in a panicked state</string>
    <string name="story4_page4">“It’s me! Matt Hagen from WCBC News! We are down in North Brooklyn City! There is a huge state of panic and people are dying and…”. The reporter stopped speaking for a moment. Besides the howling of the wind, was another loud noise that sounded like an engine.</string>
    <string name="story4_page4_choice1">“Oh god…! Something’s going on</string>
    <string name="story4_page4_choice2">Planes are falling out of the sky and destroying the city</string>
    <string name="story4_page5">Me, James, and the other agents looked up, and sure enough, saw planes in the distance, falling from the clouds. “What in the living hell is happening around here?!” James yelled. Just then, a person came shambling across the road, unaware of the vehicle that was speeding in their direction. Before the driver could stop, the car slammed into the person.</string>
    <string name="story4_page6">Blood splattered on the windshield, disabling our view of the mayhem. The car swung to the side of the road, with the driver struggling to keep the car on it’s wheels. Me and James were handing on the door handles, trying not to fall on one another. But the force was too strong. The car flipped over and rolled across the road, shattering windows. Within seconds, I had passed out. Everything went black.</string>
    <string name="story5_page0">Bacon ipsum dolor amet turducken short ribs pancetta tongue beef ribs. Ham hock beef kevin jerky filet mignon alcatra pastrami leberkas ball tip pig prosciutto bacon strip steak chicken. Short loin pork prosciutto rump capicola, sirloin andouille filet mignon meatloaf.</string>
    <string name="story5_page0_choice1">Pork loin pancetta beef landjaeger ball tip shank</string>
    <string name="story5_page0_choice2">Pork belly kevin jowl ham hock ribeye</string>
    <string name="parse_stories_from_json">PARSE STORIES FROM JSON</string>
</resources>