<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

 <ImageView
     android:id="@+id/image"
     android:layout_width="100dp"
     android:layout_height="100dp"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="60dp"
     android:scaleType="centerCrop"
     android:src="@drawable/ic_firebase_logo"
     android:contentDescription="@string/app_name" />
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firebase_login"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/image"
        android:gravity="center"/>
    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>
   <Button
       android:id="@+id/parseStoriesFromJson"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_above="@+id/seeNotes"
       android:layout_marginLeft="26dp"
       android:layout_marginRight="26dp"
       android:layout_marginBottom="22dp"
       android:background="@drawable/round_bg"
       android:text="@string/parse_stories_from_json" />
    <Button
        android:id="@+id/seeNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seeStories"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/round_bg"
        android:text="@string/see_notes" />
    <Button
        android:id="@+id/seeStories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logout"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/round_bg"
        android:text="@string/see_stories" />
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/round_bg"
        android:drawableStart="@drawable/ic_google_logo"
        android:drawableLeft="@drawable/ic_google_logo"
        android:text="@string/login_with_google" />
    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/round_bg"
        android:text="@string/logout"
        android:visibility="invisible" />
</RelativeLayout>